--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -3,7 +3,7 @@
 @import "./editor";
 
 body {
-    background: white !important;
+    background-color: white;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
     white-space: nowrap;
