Update community.hbs (#788)
* Update community.hbs

MINT-EC-Schulen TExt angepasst

* fix some text

--- a/views/community/community.hbs
+++ b/views/community/community.hbs
@@ -1,16 +1,31 @@
+<!DOCTYPE html>
+
 <section class="section-community">
     <h4>Schulen</h4>
-
     <h5>Wie bewerben sich MINT-EC Schulen?</h5>
+    <p>
+        <ul>
+            Alle 316 Schulen aus dem MINT-EC-Schulnetzwerk können sich für die Teilnahme am Projekt „HPI Schul-Cloud“ anmelden. Um Pilotschule zu werden loggen Sie sich bitte mit Ihrem Profil auf der Website des MINT-EC ein und füllen Sie das Formular aus.
+            <a href="https://www.mint-ec.de/schulnetzwerk/hpi-schul-cloud/mitmachen/" target="_blank">Zur Anmeldung</a>
+            <li><b>Die nächsten Starttermine:</b></li>
+            <li>2. Schulhalbjahr 2018/2019</li>
+            <li>1. Schulhalbjahr 2019/2020</li>
+            <li>2. Schulhalbjahr 2019/2020</li>
+        </ul>
+    </p>
+    <p>
+        Auf der <a href="https://www.mint-ec.de/schulnetzwerk/hpi-schul-cloud/mitmachen/" target="_blank">MINT-EC-Website</a> finden Schulen weitere hilfreiche Informationen für den Einstieg in die HPI Schul-Cloud, wie etwa Rahmenbedingungen zur Teilnahme,
+        Unterstützung bei der Anmeldung und Nutzung sowie Möglichkeiten das Pilotprojekt aktiv mitzugestalten. Bei Fragen wenden Sie sich gerne an das Team „HPI Schul-Cloud“ von MINT-EC:
+        <ul>
+            <li>E-Mail: <a href="mailto:schul-cloud@mint-ec.de">schul-cloud@mint-ec.de</a></li>
+            <li>Telefon: 030 400 067 47</li>
+        </ul>
 
-    <p>Ab Mai 2018 beginnt die zweite Pilotphase, in der die Erprobung der {{theme.title}} auf alle über 300 MINT-EC Schulen ausgeweitet
-        wird. Um die {{theme.title}} als MINT-EC Schule testen zu können, ist lediglich eine online Bewerbung erforderlich. Diese
-        finden Sie auf der <a href="https://www.mint-ec.de/veranstaltungen/849-schul-cloud-teilnahme-an-der-zweiten-pilotphase/" target="_blank">Website des MINT-EC</a>. Dort können Sie ebenfalls erforderliche technische Rahmenbedingungen und weitere Informationen
-        bezüglich der Nutzung der {{theme.title}} einsehen. Bei Fragen wenden Sie sich gerne an das {{theme.title}} Team des MINT-EC (<a href="mailto:schul-cloud@mint-ec.de">schul-cloud@mint-ec.de</a>). </p>
+    </p>
 
     <h5>Können auch nicht MINT-EC Schulen die {{theme.title}} erproben?</h5>
-
-    <p>In den Pilotphasen beschränkt sich die Nutzung der {{theme.title}} auf Schulen des nationalen Excellence Schulnetzwerks MINT-EC.
+    <p>
+        In den Pilotphasen beschränkt sich die Nutzung der {{theme.title}} auf Schulen des nationalen Excellence Schulnetzwerks MINT-EC.
         Da uns bewusst ist, wie hoch die Nachfrage auch von anderen Schulen ist, sammeln wir momentan die Anfragen auf einer
         Interessenliste und werden zu gegebener Zeit mit dem BMBF über eine weitere Öffnung sprechen. Falls Sie Interesse
         an der Nutzung der {{theme.title}} haben, senden Sie gerne folgende Informationen an
@@ -20,10 +35,9 @@
             <li>- Geschwindigkeit des Internetanschlusses in Ihrer Schule</li>
             <li>- Anzahl der W-LAN-Router mit Hinweis für welche Zielgruppen diese freigegeben sind (Lehrer, Schüler, beide)</li>
             <li>- Informationen darüber, ob Ihre Schule komplett mit W-LAN ausgeleuchtet ist oder nur teilweise</li>
-            <li>- Anzahl der vorhandenen mobilen und webfähigen Endgeräte (Laptops, Tablets, etc.) oder ob der Bring-Your-Own-Device
-                als Ansatz aktiv eingesetzt wird</li>
+            <li>- Anzahl der vorhandenen mobilen und webfähigen Endgeräte (Laptops, Tablets, etc.) oder ob der Bring-Your-Own-Device als Ansatz aktiv eingesetzt wird</li>
+        </ul>
     </p>
-
     <p>Gerne können Sie außerdem <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/flyer/Schul-Cloud_Technische_Vorbereitungen.pdf" target="_blank">hier</a> einsehen, welche Hinweise bei der Vorbereitung auf eine mögliche {{theme.title}} Nutzung helfen können.</p>
     <br />
 
@@ -33,28 +47,30 @@
         mit einer individualisierten Oberfläche nutzen. Die Kooperation ermöglicht einen engen Erfahrungsaustausch, von dem
         beide Seiten profitieren werden. Zudem wird erprobt, wie die {{theme.title}} länderspezifisch und schulformübergreifend
         effizient eingesetzt werden kann. Weitere Informationen zu der Kooperation mit der niedersächsischen Bildungscloud
-
-        können Sie <a href="https://hpi.de/pressemitteilungen/2018/digitalisierung-niedersaechsische-bildungscloud-und-bundesweite-schul-cloud-starten-kooperation-auf-der-didacta.html" target="_blank">hier</a> einsehen. 
+        können Sie <a href="https://hpi.de/pressemitteilungen/2018/digitalisierung-niedersaechsische-bildungscloud-und-bundesweite-schul-cloud-starten-kooperation-auf-der-didacta.html" target="_blank">hier</a> einsehen.
         Wenn Sie als Landesinitiative Interesse daran haben, mit der {{theme.title}} zu kooperieren, wenden Sie sich gerne
-        an <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>. </p>
+        an <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>.
+    </p>
     <br />
-    <h3>Inhalteanbieter</h3>
 
+    <h3>Inhalteanbieter</h3>
     <p>Wir freuen uns über Ihre Anfragen unter  <a href="mailto:inhalte@schul-cloud.org">inhalte@schul-cloud.org</a>.</p>
 
     <h4>Entwickler, Informatik AGs, ...</h4>
-
-    <p>Die {{theme.title}} ist ein Open-Source Projekt. Der Quellcode ist unter
-    <a href="https://github.com/schul-cloud" target="_blank">https://github.com/schul-cloud</a> zu finden.
-        Unser Ticketsystem liegt unter <a href="https://ticketsystem.schul-cloud.org" target="_blank">https://ticketsystem.schul-cloud.org</a>.            
+    <p>
+        Die {{theme.title}} ist ein Open-Source Projekt. Der Quellcode ist unter
+        <a href="https://github.com/schul-cloud" target="_blank">https://github.com/schul-cloud</a> zu finden.
+        Unser Ticketsystem liegt unter <a href="https://ticketsystem.schul-cloud.org" target="_blank">https://ticketsystem.schul-cloud.org</a>.
         Bei Bedarf kann auch eine Aufnahme in unseren Team-Messenger erfolgen.
-        Wir freuen uns über Bugfixes und neue Funktionen. Mehr Infos gerne bei <a href="mailto:jan.renz@hpi.de">jan.renz@hpi.de</a> erfragen.</p> 
-        
-    <h4>Stellenausschreibungen im Projekt {{theme.title}}</h4>
-    <p>Du möchtest gerne Mitglied in unserem {{theme.title}} Team werden? Wir suchen:
-    <br />
-    <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/system-engineer-dev-ops-mw.html" target="_blank">System Engineer Dev-Ops im Projekt {{theme.title}} (m/w)</a>
-    <br />
-    <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" target="_blank">Web Developer im Projekt {{theme.title}} (m/w)</a>
+        Wir freuen uns über Bugfixes und neue Funktionen. Mehr Infos gerne bei <a href="mailto:jan.renz@hpi.de">jan.renz@hpi.de</a> erfragen.
+    </p>
+
+    <h4>Stellenausschreibungen im Projekt Schul-Cloud</h4>
+    <p>
+        Du möchtest gerne Mitglied in unserem {{theme.title}} Team werden? Wir suchen:
+        <br />
+        <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/system-engineer-dev-ops-mw.html" target="_blank">System Engineer Dev-Ops im Projekt {{theme.title}} (m/w)</a>
+        <br />
+        <a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" target="_blank">Web Developer im Projekt {{theme.title}} (m/w)</a>
     </p>
 </section>
