new error page (#799)
* Added Fitler & Livesearch

* fancy loggedin error page + eslint

next step: Use new error template for all errors

* new error page for all pages + cleanup & bugfixes

* hide risky informations in production

* removed unused code

* removed unused import

--- a/static/styles/lib/error.scss
+++ b/static/styles/lib/error.scss
@@ -1,25 +1,61 @@
-@import './colors';
+@import "./bootstrap/scss/bootstrap-flex";
+@import "./bootstrap/scss/_animation"; // this import is needed to enable the toggle feature of the detail card
 
-body {
-    background: $colorBeige;
-}
-.error-page {
-    h3 {
-        color: $primaryColor;
-        font-size: 5rem;
-        font-weight: 700;
+.error-header-wrapper{
+    width: 100%;
+    text-align: center;
+    .error-header-image{
+        width: 40vw;
+        margin-bottom: -5vw;
+        @include media-breakpoint-down(xs) {
+            width: 70vw;
+        }
+    }
+    .error-header-code{
+        font-size: 10vw;
+        min-height: .75em;
         margin: 0;
+        @include media-breakpoint-down(xs) {
+            font-size: 5rem;
+        }
+        font-weight: bold;
     }
-    .message {
-        font-size: 2rem; 
-        font-weight: 700;
+    .error-header-text{
+        font-size: 2rem;
+        font-weight: bold;
     }
-    .error-card {
-        position: relative;
+}
+
+.error-details-wrapper{
+    text-align: center;
+    /* toggles text depending on toggle state */
+    #error-toggle-details{
+        &[aria-expanded="false"]{
+            .show{
+                display: initial
+            }
+            .hide{
+                display: none;
+            }
+        }
+        &[aria-expanded="true"]{
+            .show{
+                display: none
+            }
+            .hide{
+                display: initial;
+            }
+        }
+    }
+    #error-details{
+        text-align: left;
+        max-width: 900px;
+        margin: 0 auto;
         .error-description{
-            max-height: 70vh;
-            overflow-y: auto;
-            word-wrap: break-word;
+            padding: 1rem;
+        }
+        pre{
+            margin: 0;
         }
     }
 }
