--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -89,6 +89,15 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-sm-6 col-xs-12 col-md-4">
+                            <div data-toggle="modal">
+                                <div>
+                                        <span class="btn btn-secondary new-file" data-file-path="{{this.path}}">
+                                            <i class="fa fa-plus" aria-hidden="true"></i> Neue Datei erstellen
+                                        </span>
+                                </div>
+                            </div>
+                        </div>
                     {{/if}}
                 </div>
             </section>
