remove double id

--- a/views/files/forms/form-new-file.hbs
+++ b/views/files/forms/form-new-file.hbs
@@ -6,8 +6,8 @@
     <input id="file-name" type="text" class="form-control" name="new-file-name" placeholder="Name der Datei" required />
     <br />
 
-    <label for="file-type">Dateiendung:</label>
-    <select id="file-type" class="custom-select mr-sm-2 form-control" id="file-ending">
+    <label for="file-ending">Dateiendung:</label>
+    <select class="custom-select mr-sm-2 form-control" id="file-ending">
         <option selected>Format auswählen</option>
         <option value="docx">Word (docx)</option>
         <option value="xlsx">Excel (xlsx)</option>
