step 2/2 - funktioniert nicht
problem: filtermodul überschreibt URL

--- a/views/administration/users_edit.hbs
+++ b/views/administration/users_edit.hbs
@@ -13,6 +13,7 @@
 
                     <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
                     <input name="displayName" type="hidden" value="{{user.displayName}}" disabled/>
+                    <input type="hidden" name="referrer" value="{{referrer}}" />
 
                     <div class="row">
                         <div class="col-md-6">
