--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -26,10 +26,10 @@
                     
                     <section class="card">
                         <div class="card-block">
-                            <div class="intro" data-step="1" data-intro="Hier kannst du einen Überblick über die Vorteile der Arbeit mit der {{theme.title}} einsehen. Außerdem erhälst du hier allgemeine Informationen über unser Projekt.">
+                            <div class="intro" data-step="1" data-intro="Hier kannst du einen Überblick über die Vorteile der Arbeit mit der HPI Schul-Cloud einsehen. Außerdem erhälst du hier allgemeine Informationen über unser Projekt.">
 
-                            <h4>Herzlich willkommen bei der {{theme.title}} !</h4>
-                            <p>Das  <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/" target="_blank">MINT-EC</a>, dem nationalen Excellence-Schulnetzwerk von über 300 Schulen bundesweit und unterstützt vom Bundesministerium für Bildung und Forschung eine {{theme.title}}. Die {{theme.title}} soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
+                            <h4>Herzlich willkommen bei der HPI Schul-Cloud !</h4>
+                            <p>Das  <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/" target="_blank">MINT-EC</a>, dem nationalen Excellence-Schulnetzwerk von über 300 Schulen bundesweit und unterstützt vom Bundesministerium für Bildung und Forschung die HPI Schul-Cloud. Sie soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
                             <!-- TODO: use a red theme as soon as available -->
                             <video-player
                                 configuration='{
@@ -59,23 +59,23 @@
                             
 
                             <ul>
-                                <li>Mehr Informationen: <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/publikationen/projekte/schul-cloud_beschreibung_website.pdf" title="Initiates file download" target="_blank">Kurzbeschreibung "Die {{theme.title}}" (.pdf)</a></li>
+                                <li>Mehr Informationen: <a href="https://hpi.de/fileadmin/user_upload/hpi/dokumente/publikationen/projekte/schul-cloud_beschreibung_website.pdf" title="Initiates file download" target="_blank">Kurzbeschreibung "Die HPI Schul-Cloud" (.pdf)</a></li>
                             </ul>
 
                             <h4>Niedrigschwelliger Zugang zu digitalen Unterrichtsinhalten</h4>
                             <p>Eine moderne Lehr- und Lerninfrastruktur ist unabdingbar, um die digitale Transformation im Bildungssektor zum Erfolg zu führen und Kinder schon im Schulalter optimal auf das Leben in einer zunehmend digitalen Gesellschaft vorzubereiten.</p>
 
-                            <h4>Ansatzpunkte der {{theme.title}}</h4>
+                            <h4>Ansatzpunkte der HPI Schul-Cloud</h4>
                             <p>Die Nutzung digitaler Medien und Lernmethoden stellt viele Schulen noch vor große Herausforderungen: veraltete Hard- sowie Software im abgeschlossenen Computerraum, fächverbindender Einsatz kaum möglich uvm.</p>
                            
                             
-                            <h4>Die Grundidee der {{theme.title}}</h4>
+                            <h4>Die Grundidee der HPI Schul-Cloud</h4>
                             <p>Webbasierte Anwendungen sowie Rechenressourcen und Speichermöglichkeiten per Cloud Computing ermöglichen einen effizienten Zugriff auf zeitgemäße IT-Dienste für einen großen Kreis an Nutzer/innen.</p>
                             <p>Der spontane, bedarfsgerechte Einsatz in jedem beliebigen Unterrichtsfach wird dadurch erleichtert. Die aufwendige Installation von Software auf einzelnen Endgeräten der Nutzer/innen entfällt.</p>
                             <p>Sämtliche Programme und das Benutzerprofil werden via Internet zur Verfügung gestellt. Um Zugang zu den digitalen Inhalten zu erlangen, braucht es lediglich einen Internetzugang, webfähige Anzeige- und Eingabegeräte, einen modernen Webbrowser sowie entsprechende Berechtigungen.</p>
-                            <p>Die Bereitstellung der {{theme.title}} ist ein entscheidender Schritt, um die Nutzung digitaler Medien in der Schule flächendeckend voranzubringen.</p>
+                            <p>Die Bereitstellung der HPI Schul-Cloud ist ein entscheidender Schritt, um die Nutzung digitaler Medien in der Schule flächendeckend voranzubringen.</p>
                             <ul>
-                                <li>Mehr Informationen: <a href="https://publishup.uni-potsdam.de/opus4-ubp/files/10385/tbhpi116.pdf" title="Initiates file download" target="_blank">Technischer Bericht "Die {{theme.title}}" (.pdf)</a></li>
+                                <li>Mehr Informationen: <a href="https://publishup.uni-potsdam.de/opus4-ubp/files/10385/tbhpi116.pdf" title="Initiates file download" target="_blank">Technischer Bericht "Die HPI Schul-Cloud" (.pdf)</a></li>
                             </ul>
                             <br />
                             <!-- TODO: use a red theme as soon as available -->
@@ -105,7 +105,7 @@
                                 }'>
                             </video-player>
                             
-                            <h4>Vorteile der {{theme.title}}</h4>
+                            <h4>Vorteile der HPI Schul-Cloud</h4>
                             <ul>
                                 <li>Zeit- und ortsunabhängiger Zugang zu einem großen Angebot an digitalen Lerninhalten</li>
                                 <li>Digitale Bildung jenseits separater Computerräume</li>
@@ -128,7 +128,7 @@
 
                     <section id="blogfeed" class="card">
                         <div class="card-block">
-                            <h4 class="card-title">{{theme.title}} Blog</h4>
+                            <h4 class="card-title">HPI Schul-Cloud Blog</h4>
                             <ul class="list-group list-group-flush">
                                 {{#each blogFeed}}
                                     <li class="list-group-item">
@@ -138,7 +138,7 @@
                                         <small>von {{this.dc:creator}} am {{this.pubDate}}</small>
                                     </li>
                                 {{else}}
-                                    <p>Der Blog ist derzeit deaktiviert! Das {{theme.title}} Team kümmert sich darum.</p>
+                                    <p>Der Blog ist derzeit deaktiviert! Das HPI Schul-Cloud Team kümmert sich darum.</p>
                                 {{/each}}
                             </ul>
                             <a href="https://blog.schul-cloud.org" target="scblog" class="card-link pull-right pt-1">weitere Artikel <i class="fa  fa-angle-double-right" aria-hidden="true"></i></a>
