--- a/views/firstLogin/consentError.hbs
+++ b/views/firstLogin/consentError.hbs
@@ -1,7 +1,8 @@
 {{#extend "lib/simple"}}
   {{#content "page"}}
     <h1>🙀 Entschuldige, das hat nicht geklappt</h1>
-    <p>Ein unerwarteter Fehler mit der Einverständniseklärung ist aufgetreten. Falls du diese Seite ernuet siehst, wende dich bitte an einen Administrator. Du kannst dich nun ausloggen, um wieder auf die Startseite zu gelangen:</p>
+    <p>Dein Login funktioniert, allerdings gibt es ein Problem mit deinen Einverständniserklärungen. Bitte wende dich an deinen Lehrer oder einen Administrator.
+    </p>
      <a class="btn btn-primary" href="/logout">Ausloggen</a>
   {{/content}}
 {{/extend}}
