restrict course file creation

--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -89,6 +89,7 @@
                                 </div>
                             </div>
                         </div>
+                    {{#if ../canCreateFile}}
                         <div class="col-sm-6 col-xs-12 col-md-4">
                             <div data-toggle="modal">
                                 <div>
@@ -98,6 +99,7 @@
                                 </div>
                             </div>
                         </div>
+                    {{/if}}
                     {{/if}}
                 </div>
             </section>
