--- a/views/files/lool.hbs
+++ b/views/files/lool.hbs
@@ -22,5 +22,11 @@
               </div>
             {{/if}}
         </div>
+        {{#if libreOfficeUrl}}
+            <div class="alert alert-warning">
+                <p class="card-text">Falls es zu Problemen mit der flüßigen Darstellung kommt oder eine Funktion in LibreOffice Online nicht funktioniert, dann versuchen Sie doch bitte einmal folendes:</p>
+                <a href="{{libreOfficeUrl}}" target="_blank">LibreOffice Online in einem externen Fenster öffnen</a>
+            </div>
+        {{/if}}
     {{/content}}
 {{/extend}}
