--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -6,7 +6,6 @@
 
     {{#content "scripts" mode="append"}}
         <script type="text/javascript" src="/scripts/dashboard.js" defer></script>
-        <script src="/scripts/socket.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
@@ -95,6 +94,14 @@
         {{/embed}}
         {{/ifneq}}
         {{/ifneq}}
+        {{/if}}
+
+        {{#if showNewReleaseModal}}
+            {{#embed "lib/components/modal" class="feature-modal"}}
+                {{#content "body"}}
+                    {{> "lib/forms/form-features"}}
+                {{/content}}
+            {{/embed}}
         {{/if}}
 
     {{/content}}
