--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -11,10 +11,12 @@
 
     {{#content "page"}}
         <section class="section-timetable" data-step="7" data-intro="Hier findest du eine Übersicht über deinen Stundenplan und anstehende Termine.">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h5>Stundenplan</h5>
-                    <time class="selected-date">{{eventsDate}}</time>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h5>Stundenplan</h5>
+                        <time class="selected-date">{{eventsDate}}</time>
+                    </div>
                 </div>
             </div>
 
