--- a/views/administration/forms/form-problem.hbs
+++ b/views/administration/forms/form-problem.hbs
@@ -1,6 +1,11 @@
 <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
 
 <div class="form-group">
+    <label>Erstellt am: </label>
+    <textarea class="form-control" name="createdAt" type="text" rows="1" disabled></textarea>
+</div>
+
+<div class="form-group">
     <label>Titel</label>
     <input class="form-control" name="subject" type="text" disabled />
 </div>
