modify teams controller and fix error, when topic list is not available

--- a/views/teams/edit-team.hbs
+++ b/views/teams/edit-team.hbs
@@ -23,6 +23,7 @@
                     <input type="hidden" name="_method" data-force-value="true" value="{{method}}"/>
                 {{/if}}
 
+                <input name="isTeam" type="hidden" data-force-value="true" value="true"/>
                 <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}"/>
 
                 <div class="form-group">
